--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,21 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Ysabeau:ital,wght@0,1;0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,1;1,100;1,200;1,300&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+html{
+  font-family: 'Ysabeau', sans-serif;
+  scroll-behavior: smooth !important;
 }
+.custom-img{
+  background-image: url(../../public/img.avif);
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
 }
-
+.custom-pharm{
+  background-image: url(../../public/pharm.jpg);
+}
+.custom-pharms{
+  background-image: url(../../public/pharm.png);
+}
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
